Added gallery and photos, updated css & html

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="card-header grid grid-2-column">
-                                <img src="src/images/bakeryname.jpeg" alt="oldest bakery" width="" height=""
+                                <img src="src/images/bakeryname.jpeg" alt="oldest bakery" width="50" height="50"
                                     class="img-responsive" />
                                 <iframe
                                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2904.122025789633!2d5.364249915400384!3d43.29076618380909!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c9c0c58aadad57%3A0xcd87f5d900181e64!2sLe%20Four%20des%20Navettes!5e0!3m2!1sen!2sus!4v1673560089428!5m2!1sen!2sus"
@@ -176,8 +176,20 @@
             <section>
                 <h2 class="text-center">Gallery</h2>
                 <h3 class="text-center">My photos from Marseille</h3>
-                <div class="grid grid-3-columns"></div>
-
+                <div class="image-grid">
+                    <img src="src/images/viewofocean.jpeg" alt="oldest bakery" width="" height=""
+                        class="img-responsive" />
+                    <img src="src/images/Marseilleyachtclub.jpeg" alt="oldest bakery" width="" height=""
+                        class="img-responsive" />
+                    <img src="src/images/EasternMemorial.jpeg" alt="oldest bakery" width="" height=""
+                        class="img-responsive" />
+                    <img src="src/images/EasternMemorial2.jpeg" alt="oldest bakery" width="" height=""
+                        class="img-responsive" />
+                    <div class="image-grid">
+                        <img src="src/images/bakery-history.jpeg" alt="oldest bakery" width="" height=""
+                            class="img-responsive" />
+                    </div>
+                </div>
             </section>
         </main>
         <footer>
