--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                 <div class="grid grid-3-column">
                     <div class="card">
                         <div class="card-header grid grid-2-column">
-                            <img src="src/images/Palais-Longchamp.jpeg" alt="palais longchamp" width="" height=""
-                                class="img-responsive" />
+                            <img src="src/images/Palais-Longchamp.jpeg" alt="palais longchamp" class="card-image"
+                                width="" height="" class="img-responsive" />
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11613.909191817502!2d5.3946029!3d43.3042669!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe8758c4ddd3ba377!2sPalais%20Longchamp!5e0!3m2!1sen!2sus!4v1673559356779!5m2!1sen!2sus"
-                                class="embed" style="border:0;" allowfullscreen="" loading="lazy"
+                                class="embed" width="" height="" style="border:0;" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade"></iframe>"
                         </div>
                         <div class="card-body">
@@ -99,8 +99,9 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="card-header grid grid-2-column">
-                                <img src="src/images/Notre-Dame.jpeg" alt="Notre Dame de la Garde" width="100"
-                                    height="100" class="img-responsive" />
+                                <img src="src/images/Notre-Dame.jpeg" alt="Notre Dame de la Garde" class="card-image"
+                                    class="img-responsive" />
+                                <br>
                                 <iframe
                                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2904.4471289693315!2d5.369049015400222!3d43.28395718424661!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c9c0c976b89df5%3A0x89254f95b5ee2ded!2sBasilique%20Notre-Dame%20de%20la%20Garde!5e0!3m2!1sen!2sus!4v1673560003297!5m2!1sen!2sus"
                                     class="embed" style="border:0;" allowfullscreen="" loading="lazy"
@@ -140,7 +141,7 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="card-header grid grid-2-column">
-                                <img src="src/images/bakeryname.jpeg" alt="oldest bakery" width="100" height="100"
+                                <img src="src/images/bakeryname.jpeg" alt="oldest bakery" class="card-image"
                                     class="img-responsive" />
                                 <iframe
                                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2904.122025789633!2d5.364249915400384!3d43.29076618380909!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12c9c0c58aadad57%3A0xcd87f5d900181e64!2sLe%20Four%20des%20Navettes!5e0!3m2!1sen!2sus!4v1673560089428!5m2!1sen!2sus"
@@ -185,10 +186,15 @@
                         class="img-responsive" />
                     <img src="src/images/EasternMemorial2.jpeg" alt="oldest bakery" width="" height=""
                         class="img-responsive" />
+                    <img src="src/images/Palais-Longchamp.jpeg" alt="palais longchamp" width="" height=""
+                        class="img-responsive" />
                     <img src="src/images/bakeryhistory.jpeg" alt="oldest bakery" width="" height=""
                         class="img-responsive" />
                     <img src="src/images/freshbread.jpeg" alt="oldest bakery" width="" height=""
                         class="img-responsive" />
+                    <img src="src/images/bakeryname.jpeg" alt="oldest bakery" class="img-responsive" />
+                    <img src="src/images/Notre-Dame.jpeg" alt="Notre Dame de la Garde" class="img-responsive" />
+
                 </div>
             </section>
         </main>
