fixed photo gallery

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11613.909191817502!2d5.3946029!3d43.3042669!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe8758c4ddd3ba377!2sPalais%20Longchamp!5e0!3m2!1sen!2sus!4v1673559356779!5m2!1sen!2sus"
                                 class="embed" width="" height="" style="border:0;" allowfullscreen="" loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade"></iframe>"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                         <div class="card-body">
                             <h4>Palais Longchamp</h4>
