--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <h5>What I like about Palais Longchamp</h5>
                             <p>
                                 The gardens are beautiful with massive waterfalls you sit outside and listen to the
-                                waterfall. Both museums are
+                                waterfalls. Both museums are
                                 massive and showcase paintings, sculptures, and drawings from the 17th and 18th
                                 century. You could spend your whole day browsing throughout both museums.
                             </p>
@@ -164,8 +164,9 @@
                             <p>136 Rue Sainte, 13007 Marseille, France</p>
                             <h5>What I like about the bakery</h5>
                             <p>
-                                Its family owned and all of their baked breads, pastries are made with fresh ingredients
-                                everyday. My favorite pastry or cookie is the Almond Macarons it’s worth the visit.
+                                Its family owned and operated. All of their baked breads, pastries are made daily with
+                                fresh ingredients. My favorite pastry or cookie is the Almond Macarons it’s worth the
+                                visit.
                             </p>
                         </div>
                         <div class="card-footer">
