added href link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h3>.TRAVEL.</h3>
             <h1>Welcome to Marseille</h1>
             <h2>Capital city of Bouches-du-Rhô département</h2>
-            <a href="#more">Learn more</a>
+            <a href="https://www.marseille-tourisme.com/en/" target="_blank">Learn more</a>
         </header>
         <main>
             <section class="grid grid-2-column">
@@ -31,7 +31,6 @@
                         class="img-responsive" />
                 </div>
                 <div>
-                    <a href="more"></a>
                     <h2>Why Marseille?</h2>
                     <h3>Marseille has one of the largest ports of the Mediterranean sea.</h3>
                     <p>
