--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <p>Bd Jard. Zoologique, 13004 Marseille, France</p>
                             <h5>What I like about Palais Longchamp</h5>
                             <p>
-                                The gardens are beautiful with massive waterfalls you sit outside and listen to the
+                                The gardens are beautiful with massive waterfalls you can sit outside and listen to the
                                 waterfalls. Both museums are
                                 massive and showcase paintings, sculptures, and drawings from the 17th and 18th
                                 century. You could spend your whole day browsing throughout both museums.
